<resources>
    <string name="app_name">Haritha</string>
    <string name="home_screen_title">Home</string>
    <string name="login_title">Login</string>
    <string name="Login_screen_sign_in_button">Sign In</string>
    <string name="Login_screen_user_name_hint">User Name</string>
    <string name="Login_screen_password_hint">Password</string>
    <string name="Login_screen_sign_up_button">Sign UP with Google</string>
    <string name="Signup_screen_confirm_password_hint">Confirm Password</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account?</string>
    <string name="server_client_id">31345152940-bj9uso7na1dr6o2mp42p55ef17ap8g7p.apps.googleusercontent.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="action_go">Go</string>
    <string name="action_try">Try it</string>

    <!-- Menu strings -->
    <string name="menu_summarize_title">Generate text from text-only input</string>
    <string name="menu_summarize_description">Sample app that summarizes text</string>
    <string name="menu_reason_title">Generate text from text-and-image input (multimodal)</string>
    <string name="menu_reason_description">Search by Image</string>
    <string name="menu_chat_title">Build multi-turn conversations (chat)</string>
    <string name="menu_chat_description">Chat with Bot</string>

    <!-- Summarize sample strings -->
    <string name="summarize_label">Text</string>
    <string name="summarize_hint">Enter text to summarize</string>

    <!-- Photo Reasoning sample strings -->
    <string name="reason_label">Question</string>
    <string name="reason_hint">Upload an image and then ask a question</string>
    <string name="add_image">Add Image</string>

    <!-- Chat sample strings -->
    <string name="chat_label">Message</string>
    <string name="action_send">Send</string>

    <string name="search_hint">Search Anything...</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="category"><font size="20">Category</font></string>
    <string name="select_one">select one</string>
    <string name="new_ad">New Ad</string>
    <string name="description">Description</string>
    <string name="best_healthy_grocery"><![CDATA[Best & Healthy Grocery]]></string>
    <string name="let_s_find_the">Let\'s Find the</string>
    <string name="support">I can communicate in</string>

    <string name="Wadana">\nStep into a world where quality meets convenience. Connect with local farmers and suppliers to receive the freshest produce and enjoy healthy eating and vibrant blooms, all within just a few taps on your screen.\n</string>
    <string name="AI1">Hello, Ask Me \n  Anything…</string>
    <string name="Prompts">Popular Prompts</string>
    <string name="languages">English \t\t සිංහල \t\t தமிழ்</string>
    <string-array name="categories">
        <item>Fruits</item>
        <item>Vegetables</item>
        <item>Flowers</item>
        <item>Herbals</item>
        <item>Spices</item>
        <item>Plants</item>
        <item>Diary</item>
        <item>Hand Crafts</item>
        <item>Other</item>
    </string-array>

</resources>

