<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:background="@drawable/nasa
">
    <TextView
        android:id="@+id/textView"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Login_screen_sign_up_button" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="20dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:hint="@string/Login_screen_user_name_hint"
        tools:ignore="VisualLintTextFieldSize" />


    <EditText
        android:id="@+id/editTextPassword_password"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/Login_screen_password_hint"
        android:ems="10"
        android:inputType="textPassword"
        tools:ignore="VisualLintTextFieldSize" />
    <EditText
        android:id="@+id/editTextPassword_confirm_password"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_height="50dp"
        android:autofillHints=""
        android:hint="@string/Signup_screen_confirm_password_hint"
        android:ems="10"
        android:inputType="textPassword"
        tools:ignore="VisualLintTextFieldSize" />

    <Button
        android:id="@+id/button_sign_up"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content"
        android:text="@string/Login_screen_sign_up_button"
        tools:ignore="VisualLintButtonSize" />

</LinearLayout>